[package]
name = "restate-cloudflare-worker"
version = "0.0.0"
edition = "2024"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http', 'axum'] }
worker-macros = { version = "0.7", features = ['http'] }
anyhow = "1.0.100"
futures = "0.3.31"
mime_guess = "2.0.5"
chrono = "0.4.42"
http = "1.4.0"
bytes = "1.11.0"
http-body-util = "0.1"
urlencoding = "2.1.3"
js-sys = "0.3.83"
wasm-bindgen-futures = "0.4"
time = { version = "0.3", features = ["wasm-bindgen"] }
axum = { version = "0.8", default-features = false, features = ['json', 'macros'] }
tower-service = "0.3.3"
schemars = { version = "1.2", features = ["chrono04", "jiff02", "url2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
restate-sdk = { version = "0.7", default-features = false, features = ["schemars", "hyper"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.17"
reqwest = { version = "0.12", default-features = false, features = [ "rustls-tls", "stream", "json" ] }
