[package]
name = "restate-cloudflare-worker"
version = "0.0.0"
edition = "2024"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http', 'axum'] }
worker-macros = { version = "0.7", features = ['http'] }
http = "1.4.0"
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
restate-sdk = { version = "0.7", git = "https://github.com/sagikazarmark/restate-sdk-rust", branch = "protocol-mode", default-features = false, features = ["schemars", "hyper"] }

# Used in commented-out examples
rand = "0.9"
thiserror = "2.0.17"
reqwest = { version = "0.12", default-features = false, features = [ "rustls-tls", "stream", "json" ] }
